<resources>
    <string name="app_name">Fabflix Mobile</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">LOGIN</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >2 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fabflix">Fabflix</string>
    <!-- Strings related to main -->
    <string name="title">Title</string>
    <string name="search">Search</string>
    <!-- Strings related to movielist -->
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <!-- Strings related to singlemovie -->
    <string name="movie_title">Movie Title</string>
    <string name="year">Year: </string>
    <string name="director">Director: </string>
    <string name="rating">Rating: </string>
    <string name="genres">Genres </string>
    <string name="stars">Stars </string>
</resources>