<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text=""
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchButton"
            app:layout_constraintVertical_bias="1.0" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="200dp" android:id="@+id/searchMessage"/>
    <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/fabflix"
            android:textColor="@color/red"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="204dp"
            app:layout_constraintHorizontal_bias="0.498" android:labelFor="@id/title2"/>
    <EditText
            android:id="@+id/searchBox"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:inputType="text"
            android:ems="10"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/title2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:text="@string/title"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="16dp" />
    <Button
            android:id="@+id/searchButton"
            android:layout_width="0dp"
            android:layout_height="67dp"
            app:layout_constraintTop_toBottomOf="@+id/searchBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/search"
            android:layout_marginTop="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>